# FDF

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
include/: functions.h  types.h
maps/: elem-fract.fdf  julia.fdf  pyramide.fdf
src/: dot.c  draw.c  hook.c  init.c  loop.c  main.c  map.c  math.c  mlx.c  render.c  rotation.c  utils.c  window.c
subprojects/: GetNextLine.wrap  MLX42.wrap
